<resources>
    <string name="app_name">Ăn Vặt Hà Nội</string>
    <string name="tv_home">Trang chủ</string>
    <string name="tv_search">Tìm kiếm</string>
    <string name="tv_favorite">Yêu thích</string>
    <string name="tv_other">Khác</string>
    <string name="tv_setting">Cài đặt</string>
    <string name="tv_log_out">Đăng xuất</string>
    <string name="tv_title_tb">Title</string>
    <string name="tv_add">Đăng bài</string>
    <string name="tv_notification">Thông báo</string>
    <string name="tv_profile">Tôi</string>
    <string name="tv_name_account">Le Ngoc The</string>
    <string name="tv_filter">Filter</string>
    <string name="tv_open">Open</string>
    <string name="tv_close">Close</string>
    <string name="et_search">Search a here...</string>
    <string name="tv_name">Tên món ăn *</string>
    <string name="tv_image">Hình ảnh *</string>
    <string name="tv_price">Giá *</string>
    <string name="tv_time">Thời gian *</string>
    <string name="tv_address">Địa chỉ *</string>
    <string name="tv_area">Quận, huyện *</string>
    <string name="choose">Chọn quận</string>
    <string name="tv_description">Mô tả món ăn *</string>
    <string name="btn_post">Đăng Món Ăn</string>
    <string name="tv_notifi">Không có thông báo</string>
    <string name="tv_filter_area">By Area</string>
    <string name="tv_filter_all">By All</string>
    <string name="tv_direction">Direction</string>
    <string name="tv_comment">Comment</string>
    <string name="title_activity_maps">Map</string>

    <!-- text introduce -->
    <string name="title_introduce01">Ăn uống khắp Hà Nội</string>
    <string name="sub_title_introduce01">Thỏa sức đam mê với các món ăn, đồ uống khu vực Hà Nội</string>

    <string name="title_introduce02">Chia sẻ địa điểm ăn vặt</string>
    <string name="sub_title_introduce02">Chia sẻ các địa điểm mà bạn đã từng trải nghiệm đến với mọi người</string>

    <string name="title_introduce03">Review các địa điểm</string>
    <string name="sub_title_introduce03">Review lại các món ăn, địa điểm đã được mọi người chia sẻ</string>
    <string name="tv_skip">Skip</string>

    <string name="facebook_app_id">2100329903365904</string>
    <string name="tv_signin">Sign In</string>
    <string name="tv_signup">Sign Up</string>
    <string name="name">Email or number phone</string>
    <string name="password">Password</string>
    <string name="tv_login">Đăng Nhập</string>
    <string name="tv_or">Hoặc</string>
    <string name="tv_login_fb">Đăng Nhập Với Facebook</string>
    <string name="tv_register">Đăng Ký</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="hint_username">Mail, Username</string>
    <string name="hint_password">Password</string>
    <string name="tv_list">Danh sách</string>
    <string name="tv_grid">Lưới</string>
    <string name="type_view">Kiểu Xem</string>

    <!-- List Area -->

    <string name="area01">Ba Đình</string>
    <string name="area02">Bắc Từ Liêm</string>
    <string name="area03">Cầu Giấy</string>
    <string name="area04">Đống Đa</string>
    <string name="area05">Hà Đông</string>
    <string name="area06">Hai Bà Trưng</string>
    <string name="area07">Hoàng Mai</string>
    <string name="area08">Hoàn Kiếm</string>
    <string name="area09">Long Biên</string>
    <string name="area10">Nam Từ Liêm</string>
    <string name="area11">Tây Hồ</string>
    <string name="area12">Thanh Xuân</string>
    <string name="tv_location">Ha Noi</string>

    <string name="notification">Thêm món yêu thích</string>
    <string name="tv_all_food">Tất cả món ăn</string>
    <string name="tv_list_area">Tất cả các quận</string>
    <string name="hint_name">E.g: Nem Phung</string>
    <string name="hint_price">E.g: VND 50,000</string>
    <string name="hint_address">E.g: Số nhà 22, Phố Nguyễn Thái Học, Thị Trấn Phùng</string>
    <string name="hint_desc">Món ăn đặc sản của Thị Trấn Phùng</string>
    <string name="hint_time_start">0:00 AM</string>
    <string name="hint_et_name">Name</string>
    <string name="hint_password_cf">Confirm Password</string>
    <string name="tv_post">Đăng</string>
</resources>
