<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/tv_home"/>

        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/ic_search"
            android:title="@string/tv_search"/>

        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/tv_favorite"/>
    </group>

    <item android:title="@string/tv_other">
        <menu>
            <item
                android:id="@+id/drawer_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/tv_setting"
                ></item>

            <item
                android:id="@+id/drawer_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/tv_log_out"
                ></item>
        </menu>
    </item>
</menu>