<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tv_home"/>


    <item
        android:id="@+id/bottom_nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/tv_search"/>


    <item
        android:id="@+id/bottom_nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/tv_add"/>


    <item
        android:id="@+id/bottom_nav_notifi"
        android:icon="@drawable/ic_notifications"
        android:title="@string/tv_notification"/>


    <item
        android:id="@+id/bottom_nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/tv_profile"/>
</menu>